--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,8 @@ jwt.refresh.expiration=${JWT_REFRESH_EXPIRATION:604800000}
 # Application configuration
 app.site-url=http://localhost:8080
 app.otp-expiry-minutes=10
+
+# SMS Configuration (Twilio)
+twilio.account.sid=${TWILIO_ACCOUNT_SID:}
+twilio.auth.token=${TWILIO_AUTH_TOKEN:}
+twilio.phone.number=${TWILIO_PHONE_NUMBER:}
